# AgentMesh-JobAgent

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: license-request.yml  support.yml
config/: config.yaml
docs/: agent-onboarding.md  client-upgrade-contract.md
scripts/: batch_greet.py  cdp_greet.py  install.ps1  install.sh  test_greet.py
skills/claude-code/: README.md  SKILL.md
skills/openclaw-job-agent/: SKILL.md
src/: __init__.py
src/jobagent/: __main__.py  cli.py
src/jobagent/application/: delivery.py  discover.py  doctor_boss.py  doctor_liepin.py  pipeline.py  probe_send.py  review.py  verify_last_send.py
src/jobagent/domain/: filter.py  greeter.py  local_profile.py  models.py  profile_builder.py  (+2 more)
tests/: test_account_state.py  test_boss_local_workflow.py  test_boss_platform_boundary.py  test_browser_diagnostics.py  test_cdp_driver.py  test_cli_boss_commands.py  test_cli_platform_aliases.py  test_cli_v3.py  test_client_upgrade.py  test_cloud_client_resilience.py  test_filter.py  test_greeter_delivery_validation.py  test_greeter_template.py  test_installers.py  test_job51_apply_delivery.py  test_job51_collect.py  test_job51_session.py  test_liepin_apply_delivery.py  test_liepin_platform_boundary.py  test_local_profile_capability.py  test_message_contract.py  test_platform_registry.py  test_profile_builder.py  test_public_platform_parsers.py  test_ranking.py  test_resume_parser.py  test_round_browser_session.py  test_support_prompt.py  test_zhilian_collect.py  test_zhilian_platform_boundary.py
(+37 files in other folders)
