[project]
name = "job-agent"
version = "0.3.16"
description = "Agent-native job discovery and delivery CLI for AgentMesh 360"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
  "pymupdf>=1.23",
  "python-docx>=1.1",
  "cryptography>=43.0",
  "websocket-client>=1.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
jobagent = "jobagent.cli:main"
job-agent = "jobagent.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["jobagent*"]
